--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           </div>
           <div class="row">
               <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center produto1">
-                  <a href="jorge">
+                  <a href="https://cosmeticosespelho.pay.yampi.com.br/r/6FB1QBFXEI">
                       <img src="files/img/casa1.png" width="151" height="84" alt="até 300m2">
                       <h3>até 300m2</h3>
                       <span class="interno">
@@ -306,7 +306,7 @@
                   <img class="cartoes" src="files/img/cartoes.png" width="234" height="23" alt="Master Card, Visa, American Express, Hipercard, Diners Club, Elo e boleto bancário">
               </div>
               <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center produto2">
-                  <a href="jorge">
+                  <a href="https://cosmeticosespelho.pay.yampi.com.br/r/HC3JUW2B7H">
                       <img src="files/img/casa2.png" width="113" height="84" alt="até 300m2">
                       <h3>até 200m2</h3>
                       <span class="interno">
@@ -324,7 +324,7 @@
                   <img class="cartoes" src="files/img/cartoes.png" width="234" height="23" alt="Master Card, Visa, American Express, Hipercard, Diners Club, Elo e boleto bancário">
               </div>
               <div class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 text-center produto3">
-                  <a href="jorge">
+                  <a href="https://cosmeticosespelho.pay.yampi.com.br/r/K9WQV1R0VY">
                       <img src="files/img/casa3.png" width="65" height="84" alt="até 300m2">
                       <h3>até 100m2</h3>
                       <span class="interno">
@@ -333,7 +333,7 @@
                           <span class="preco">
                               de <i>R$ 297,00</i> por<br>
                               12x <strong>R$ 21,30</strong><br>
-                              ou R$ 190,00 à vista
+                              ou R$ 197,00 à vista
                           </span>
                           <span class="ctaProdutos">Comprar agora</span>
                       </span>
